--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.0",
     "passport-spotify": "^1.0.1",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
